Fixed 3rd button on mobile

--- a/css/portfolio_format.css
+++ b/css/portfolio_format.css
@@ -256,6 +256,10 @@ video {
 		margin-left: 0px;
 	}
 
+	.hide2{
+		margin-left: 0px;
+	}
+
 	.caption-container{
 		width: 100%;
 	}
